tests/errors/vector-pattern-length-checked.ari
fn main() -> i64 {
  let values: Vec[i64] = [1, 2];
  return match values {
    [head, ..] => head,
    _ => 0,
  };
}
